Fixed layout problem

--- a/ios.css
+++ b/ios.css
@@ -1,10 +1,10 @@
 #topbar {
     padding-top: 8px;
-    height: 13%;
+    height: 12.3%;
     width: 100%;
     background-color: #0f6a63;
     position: absolute;
-    bottom: 87%;
+    bottom: 87.7%;
 }
 button {
     width: 65px;
